--- a/style.css
+++ b/style.css
@@ -1,98 +1,101 @@
-* {
+*{
   margin: 0;
   padding: 0;
 }
-body {
+body{
   margin: 0 auto;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-header {
-  padding: 10px 0;
-  background: black;
+header{
+  padding : 10px 0;
+  background: #000;
 }
-.container {
+.container{
   max-width: 1100px;
   margin: 0 auto;
 }
-.logo {
+.logo{
   float: left;
   margin-right: 30px;
 }
-.logo a {
+.logo a{
   text-decoration: none;
   display: block;
   margin: 0;
-  color: red;
+  color: red;;
 }
-.logo h3 {
+.logo h3{
   font-size: 26px;
   font-family: cursive;
+  transform: rotate(-15deg);
   font-weight: 600;
 }
-nav.menu {
+nav.menu{
   overflow: hidden;
 }
-nav.menu ul {
+nav.menu ul{
   float: right;
   list-style: none;
   margin: 0;
-  padding: 0;
+  padding : 0;
 }
-nav.menu ul li {
+nav.menu ul li{
   display: inline-block;
   line-height: 45px;
   height: 45px;
   padding: 0 20px;
 }
-nav.menu ul li a {
+nav.menu ul li a{
   text-decoration: none;
-  color: #fff;
+  color: #FFF;
   position: relative;
   display: block;
   text-transform: uppercase;
 }
-nav.menu ul li a:before {
-  content: "";
-  background: #fff;
+nav.menu ul li a:before{
+  content: '';
+  background: #FFF;
   height: 2px;
   width: 0;
   bottom: 5px;
   left: 0;
   position: absolute;
 }
-nav.menu ul li a:hover:before {
+nav.menu ul li a:hover:before{
   width: 100%;
   transition: linear 0.5s;
 }
-main {
-  background-color: #0303af;
+.container-body{
+  overflow: hidden;
+ background: #0303AF;
 }
-.content {
+.content{
   width: 100%;
+  margin-top: 10px;
   position: relative;
 }
-.content-left {
+.content-left{
   width: 50%;
   padding-top: 50px;
   float: left;
 }
-.content-left .details h2 {
-  color: #fff;
+.content-left .details h2{
+  color: #FFF;
   font-size: 18px;
   font-weight: 500;
   opacity: 0.8;
   line-height: 1.2;
   letter-spacing: 1px;
 }
-.content-left span {
+.content-left span{
   display: block;
 }
-.content-left .details span.hello {
-  color: #fff;
+.content-left .details span.hello{
+  color: #FFF;
   font-size: 30px;
-  font-weight: 600;
+  font-weight: 600; 
 }
-.content-left .details span.name {
+.content-left .details span.name{
   color: yellow;
   font-size: 25px;
   font-family: cursive;
@@ -101,90 +104,87 @@ main {
   padding: 10px 0;
   text-shadow: 0 5px 6px rgba(0, 0, 0, 0.45);
 }
-.content-left .details p {
+.content-left .details p{
   color: #f5f2f2;
   font-size: 15px;
   font-weight: 400;
   line-height: 145%;
   margin-top: 15px;
 }
-.content-left .personal-button ul {
+.content-left .personal-button ul{
   list-style: none;
   margin: 0;
-  padding-top: 23%;
+  padding-top: 23%;;
 }
-.content-left .personal-button ul li {
+.content-left .personal-button ul li{
   display: inline-block;
   padding: 10px 30px;
-  border: 1px #fff solid;
+  border: 1px #FFF solid;
   border-radius: 30px;
   transition: 0.5s linear;
-  margin-right: 10px;
 }
-.content-left .personal-button ul li:hover {
-  background: #fff;
+.content-left .personal-button ul li:hover{
+  background: #FFF;
   transition: 0.5s all;
   cursor: pointer;
 }
-.content-left .personal-button ul li:hover a {
-  color: black;
+.content-left .personal-button ul li:hover a{
+  color: #000;
 }
-.content-left .personal-button ul li a {
-  color: #fff;
+.content-left .personal-button ul li a{
+  color: #FFF;
   text-decoration: none;
 }
-.content-right {
+.content-right{
   width: 50%;
   float: left;
 }
-.content .image img {
+.content .image img{
   height: auto;
   width: 100%;
 }
-
-.contact-box {
-  clear: both;
-  width: 400px;
-  padding-top: 100px;
-  padding-bottom: 50px;
-  margin-right: auto;
-  margin-left: auto;
+.copyright{
+background: black;
 }
-
-.contact-box h2 {
-  color: white;
-  margin-bottom: 15px;
+.copyright p{
+  font-size: 16px;
+  letter-spacing: 1.5px;
+  text-align: center;
+  color: #f5f2f2;
+  padding: 5px 0;
+}
+.contact-box{
+  margin-left: 20%;
+  margin-right: 20%;
+}
+.contact-form h2 {
+  margin-top: 30px;
 }
 
 label {
-  color: white;
+  display: inline-block;
+  margin-bottom: .5rem;
+  margin-top: 0.5rem;
+  color: #FFF;
 }
 
-input,
-textarea {
+input[type="text"],
+input[type="email"] {
   padding: 10px 5px;
   width: 100%;
-  background: white;
-  outline: none;
-  border: none;
-  margin-top: 8px;
-  margin-bottom: 8px;
+  background: #f7f7f7;
 }
 
-button {
+input[type="submit"],
+input[type="reset"] {
   padding: 5px 30px;
+  background: #9809;
   cursor: pointer;
+  display: inline-flex;
 }
-
-/* Footer */
-footer {
-  background-color: black;
-  padding: 10px 0;
-}
-
-.copyright p {
-  font-size: 18px;
-  letter-spacing: 1.5px;
-  font-family: cursive;
-  color: #f5f2f2;
+button{
+  padding: 5px 20px;
+  margin: 20px 0;
+  background: #FFF;
+  color: black;
 }
