--- a/style.css
+++ b/style.css
@@ -1,24 +1,24 @@
-*{
+* {
   margin: 0;
   padding: 0;
 }
-body{
+body {
   margin: 0 auto;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 header{
   padding : 10px 0;
-  background: #000;
+  background: black;
 }
 .container{
   max-width: 1100px;
   margin: 0 auto;
 }
-.logo{
+.logo {
   float: left;
   margin-right: 30px;
 }
-.logo a{
+.logo a {
   text-decoration: none;
   display: block;
   margin: 0;
@@ -33,7 +33,7 @@ header{
 nav.menu{
   overflow: hidden;
 }
-nav.menu ul{
+nav.menu ul {
   float: right;
   list-style: none;
   margin: 0;
@@ -47,27 +47,27 @@ nav.menu ul li{
 }
 nav.menu ul li a{
   text-decoration: none;
-  color: #FFF;
+  color: white;
   position: relative;
   display: block;
   text-transform: uppercase;
 }
 nav.menu ul li a:before{
   content: '';
-  background: #FFF;
+  background: white;
   height: 2px;
   width: 0;
   bottom: 5px;
   left: 0;
   position: absolute;
 }
-nav.menu ul li a:hover:before{
+nav.menu ul li a:hover:before {
   width: 100%;
   transition: linear 0.5s;
 }
 .container-body{
   overflow: hidden;
- background: #0303AF;
+  background: #0303AF;
 }
 .content{
   width: 100%;
@@ -80,7 +80,7 @@ nav.menu ul li a:hover:before{
   float: left;
 }
 .content-left .details h2{
-  color: #FFF;
+  color: white;
   font-size: 18px;
   font-weight: 500;
   opacity: 0.8;
@@ -91,7 +91,7 @@ nav.menu ul li a:hover:before{
   display: block;
 }
 .content-left .details span.hello{
-  color: #FFF;
+  color: white;
   font-size: 30px;
   font-weight: 600; 
 }
@@ -119,20 +119,20 @@ nav.menu ul li a:hover:before{
 .content-left .personal-button ul li{
   display: inline-block;
   padding: 10px 30px;
-  border: 1px #FFF solid;
+  border: 1px white solid;
   border-radius: 30px;
   transition: 0.5s linear;
 }
 .content-left .personal-button ul li:hover{
-  background: #FFF;
+  background: white;
   transition: 0.5s all;
   cursor: pointer;
 }
 .content-left .personal-button ul li:hover a{
-  color: #000;
+  color: black;
 }
 .content-left .personal-button ul li a{
-  color: #FFF;
+  color: white;
   text-decoration: none;
 }
 .content-right{
@@ -153,38 +153,47 @@ background: black;
   color: #f5f2f2;
   padding: 5px 0;
 }
-.contact-box{
-  margin-left: 20%;
-  margin-right: 20%;
+
+.contact-box {
+  margin-top: 150px;
+  max-width: 350px;
+  margin-bottom: 30px;
+  margin-left: auto;
+  margin-right: auto;
 }
-.contact-form h2 {
-  margin-top: 30px;
+
+.contact-box h1 {
+  margin-bottom: 30px;
+  font-family: monospace;
+  color: white;
 }
 
 label {
-  display: inline-block;
-  margin-bottom: .5rem;
-  margin-top: 0.5rem;
-  color: #FFF;
+  display: block;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  color: white;
 }
 
-input[type="text"],
-input[type="email"] {
-  padding: 10px 5px;
+input, textarea {
+  display: block;
   width: 100%;
-  background: #f7f7f7;
+  padding: 10px;
+  border: none;
+  outline: none;
+  margin-bottom: 15px;
 }
 
-input[type="submit"],
-input[type="reset"] {
-  padding: 5px 30px;
-  background: #9809;
-  cursor: pointer;
-  display: inline-flex;
+textarea {
+  height: 100px;
 }
-button{
+
+button {
   padding: 5px 20px;
   margin: 20px 0;
-  background: #FFF;
   color: black;
+}
+
+.clearfix {
+  clear: both;
 }
