Remove unneccessary & advanced css

--- a/style.css
+++ b/style.css
@@ -6,11 +6,11 @@ body {
   margin: 0 auto;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-header{
+header {
   padding : 10px 0;
   background: black;
 }
-.container{
+.container {
   max-width: 1100px;
   margin: 0 auto;
 }
@@ -24,7 +24,7 @@ header{
   margin: 0;
   color: red;;
 }
-.logo h3{
+.logo h3 {
   font-size: 26px;
   font-family: cursive;
   transform: rotate(-15deg);
@@ -45,31 +45,20 @@ nav.menu ul li{
   height: 45px;
   padding: 0 20px;
 }
-nav.menu ul li a{
+nav.menu ul li a {
   text-decoration: none;
   color: white;
   position: relative;
   display: block;
   text-transform: uppercase;
 }
-nav.menu ul li a:before{
-  content: '';
-  background: white;
-  height: 2px;
-  width: 0;
-  bottom: 5px;
-  left: 0;
-  position: absolute;
-}
-nav.menu ul li a:hover:before {
-  width: 100%;
-  transition: linear 0.5s;
-}
-.container-body{
+
+.container-body {
   overflow: hidden;
   background: #0303AF;
 }
-.content{
+
+.content {
   width: 100%;
   margin-top: 10px;
   position: relative;
@@ -102,50 +91,51 @@ nav.menu ul li a:hover:before {
   font-weight: 600;
   letter-spacing: 1px;
   padding: 10px 0;
-  text-shadow: 0 5px 6px rgba(0, 0, 0, 0.45);
 }
-.content-left .details p{
+
+.content-left .details p {
   color: #f5f2f2;
   font-size: 15px;
   font-weight: 400;
   line-height: 145%;
   margin-top: 15px;
 }
-.content-left .personal-button ul{
+
+.content-left .personal-button ul {
   list-style: none;
   margin: 0;
   padding-top: 23%;;
 }
-.content-left .personal-button ul li{
+
+.content-left .personal-button ul li {
   display: inline-block;
+  margin-right: 15px;
   padding: 10px 30px;
   border: 1px white solid;
   border-radius: 30px;
-  transition: 0.5s linear;
 }
-.content-left .personal-button ul li:hover{
-  background: white;
-  transition: 0.5s all;
-  cursor: pointer;
-}
-.content-left .personal-button ul li:hover a{
-  color: black;
-}
-.content-left .personal-button ul li a{
+
+.content-left .personal-button ul li a {
   color: white;
   text-decoration: none;
 }
-.content-right{
+
+.content-right {
   width: 50%;
   float: left;
 }
+
 .content .image img{
   height: auto;
   width: 100%;
 }
-.copyright{
-background: black;
+
+footer {
+  background: black;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
+
 .copyright p{
   font-size: 16px;
   letter-spacing: 1.5px;
@@ -157,7 +147,7 @@ background: black;
 .contact-box {
   margin-top: 150px;
   max-width: 350px;
-  margin-bottom: 30px;
+  margin-bottom: 150px;
   margin-left: auto;
   margin-right: auto;
 }
